RT-21212: Change two words on epic page

--- a/web-content/root/education/epic.html
+++ b/web-content/root/education/epic.html
@@ -4,7 +4,7 @@
 			<figure class="col-sm-12  weteachcs-card__figure">
 				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1761473/epic-4c-2020-logo-with-text.svg" style="border: none" /></figure>
 			<p class="col-sm-12  weteachcs-card__content">
-				EPIC's mission is to broaden participation in K20 computing pathways through research, outreach, professional development, and policy advocacy. To achieve this mission, we partner with school districts, institutions of higher education, industry leaders, and federal, state and local government entities who are also dedicated to expanding access and opportunity for traditionally underrepresented students in computing. EPIC also provides evaluation and technology services to external entities to help advance their STEM education research and outreach.</p>
+				EPIC's mission is to broaden participation in K20 computing pathways through research, outreach, professional development, and policy advocacy. To achieve this mission, we partner with school districts, institutions of higher education, industry leaders, and federal, state and local government entities who are also dedicated to expanding access and opportunity for historically underserved students in computing. EPIC also provides evaluation and technology services to external entities to help advance their STEM education research and outreach.</p>
 		</div>
 	</div>
 	<h3>
