Quick: Home Train. & Events: Add Item
(e-mail request)

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -13,7 +13,7 @@
 		<p>
 			<a href="https://learn.tacc.utexas.edu/course/view.php?id=113" target="_blank">Containers at TACC<br /><small>(hybrid course - you may participate in person or online)</small></a><br />
 			February 9th, 2022<span>&nbsp; |&nbsp;
-			9:00am – 4:00pm</span></p>
+			9:00am – 4:00pm CST</span></p>
 	</div>
 </div>
 <div class="row">
@@ -23,7 +23,7 @@
 		<p>
 			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=115" target="_blank">High Performance Computing on Frontera/Webinar</a><br />
 			February 17th – 24th, March 3rd<span>&nbsp; |&nbsp;
-			9:00am – 3:30pm</span></p>
+			9:00am – 3:30pm CST</span></p>
 	</div>
 </div>
 <div class="row">
@@ -33,5 +33,15 @@
 		<p>
 			<a href="https://frontera-portal.tacc.utexas.edu/fellowship/application/" target="_blank">Frontera Computational Science Fellowships: Apply Now</a><br />
 			February 18th, 2022</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=116" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/machine-learning-data-analysis.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=116" target="_blank">Machine Learning at TACC Training Series</a><br />
+			March 24, March 31, April 7, April 14<span>&nbsp; |&nbsp;
+			9:00AM – 1:00PM CST</span></p>
 	</div>
 </div>
