Quick: Save epic styles from CMS

--- a/web-content/root/education/epic--styles.html
+++ b/web-content/root/education/epic--styles.html
@@ -15,7 +15,7 @@
         abbr[title] { text-decoration: none; }
 /* FAQ: The global CSS styles provide decoration that is
         confusing without the accompanying UX for `title` attribute */
-        abbr:not([title]) { border-bottom: none; cursor: unset; }</style>
+        abbr:not([title]) { border-bottom: unset; cursor: unset; }</style>
 
 <li>Global <code>.s-text-figure-pair</code> Scope</li>
 <style id="style--s-text-figure-pair" type="text/css">
