TUP-47: Save epic newsletter styles like other CSS
- ../epic--styles.html
- EPIC/weteach_cs--css.html

--- a/web-content/root/education/EPIC/newsletter--css.html
+++ b/web-content/root/education/EPIC/newsletter--css.html
@@ -1,9 +1,8 @@
-<p>
-	<!-- FAQ: Borrow `lfr-meta-actions` to ensure CMS users see this note, but not normal users --><!-- HACK: The text shows in incognito mode..., so I have added `display: none` until I fix that --></p>
-<p class="lfr-meta-actions" style="display: none">
-	<code>Newsletter Styles<br />
-	<small>(this text only appears for CMS editors)</small></code>
-	<style id="epic-newsletter-styles" type="text/css">
+<p><strong>EPIC Newsletter Styles</strong></p>
+<ul>
+
+<li>Global <code>dfn</code> Element</li>
+<style id="style--epic-newsletter" type="text/css">
 /* Set generic styles */
 .portlet-column-content .portlet-asset-publisher .asset-teaser {
   padding: 10px 1em 0; /* tweaked until it looks okay */
@@ -54,5 +53,7 @@
   font-size: unset;
   /* undo `.lead` (via `tacc-new-theme/css/main.css`) */
   font-weight: unset;
-}	</style>
-</p>
+}
+</style>
+
+</ul>
