TUP-47: Set newsletter CSS title + save from CMS

--- a/web-content/root/education/EPIC/newsletter--css.html
+++ b/web-content/root/education/EPIC/newsletter--css.html
@@ -1,7 +1,5 @@
-<p><strong>EPIC Newsletter Styles</strong></p>
-<ul>
-
-<li>Global <code>dfn</code> Element</li>
+<p>
+	<strong>EPIC Newsletter Styles</strong></p>
 <style id="style--epic-newsletter" type="text/css">
 /* Set generic styles */
 .portlet-column-content .portlet-asset-publisher .asset-teaser {
@@ -53,7 +51,8 @@
   font-size: unset;
   /* undo `.lead` (via `tacc-new-theme/css/main.css`) */
   font-weight: unset;
-}
-</style>
-
+}</style>
+<ul>
+    <li>
+        CMS <code>.portlet-*</code> and <code>.asset-*</code> Classes</li>
 </ul>
