Unpublished: Staff Dir Update '21-12-01–'22-02-18

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -317,14 +317,6 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/anna-dabrowski">Dabrowski, Anna</a></td>
-			<td>
-				<a href="mailto:adabrowski@tacc.utexas.edu">adabrowski@tacc.utexas.edu</a></td>
-			<td>
-				<a name="D"></a> Data Management &amp; Collections</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/maytal-dahan">Dahan, Maytal</a></td>
 			<td>
 				<a href="mailto:maytal@tacc.utexas.edu">maytal@tacc.utexas.edu</a></td>
@@ -378,6 +370,14 @@
 				<a href="mailto:medeker@tacc.utexas.edu">medeker@tacc.utexas.edu</a></td>
 			<td>
 				<a name="E"></a> Networking, Security &amp; Operations</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/garrett-edmonds">Edmonds, Garrett</a></td>
+			<td>
+				<a href="mailto:gedmonds@tacc.utexas.edu">gedmonds@tacc.utexas.edu</a></td>
+			<td>
+				Advanced Computing Interfaces, Web &amp; Mobile Applications</td>
 		</tr>
 		<tr>
 			<td>
@@ -469,6 +469,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/nathan-freeman">Freeman, Nathan</a></td>
+			<td>
+				<a href="mailto:nfreeman@tacc.utexas.edu">nfreeman@tacc.utexas.edu</a></td>
+			<td>
+				Advanced Computing Interfaces</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/joshua-freeze">Freeze, Joshua</a></td>
 			<td>
 				<a href="mailto:jfreeze@tacc.utexas.edu">jfreeze@tacc.utexas.edu</a></td>
@@ -490,6 +498,14 @@
 				<a href="mailto:agaither@tacc.utexas.edu">agaither@tacc.utexas.edu</a></td>
 			<td>
 				Strategic Initiatives</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/jack-gaither">Gaither, Jack</a></td>
+			<td>
+				<a href="mailto:jgaither@tacc.utexas.edu">jgaither@tacc.utexas.edu</a></td>
+			<td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -693,14 +709,6 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/ethan-ho">Ho, Ethan</a></td>
-			<td>
-				<a href="mailto:eho@tacc.utexas.edu">eho@tacc.utexas.edu</a></td>
-			<td>
-				Life Sciences Computing</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/damian-hopkins">Hopkins, Damian</a></td>
 			<td>
 				<a href="mailto:dhopkins@tacc.utexas.edu">dhopkins@tacc.utexas.edu</a></td>
@@ -765,11 +773,11 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/shein-kim">Kim, Shein</a></td>
+				<a href="/web/website/about/directory/tabish-kahn">Khan, Tabish</a></td>
 			<td>
-				<a href="mailto:skim@tacc.utexas.edu">skim@tacc.utexas.edu</a></td>
+				<a href="mailto:tkhan@tacc.utexas.edu">tkhan@tacc.utexas.edu</a></td>
 			<td>
-				Center Operations &amp; Administration</td>
+				Data Management &amp; Collections</td>
 		</tr>
 		<tr>
 			<td>
@@ -805,11 +813,11 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/hannah-lewis">Lewis, Hannah</a></td>
+				<a href="/web/website/about/directory/nic-lewis">Lewis, Nic</a></td>
 			<td>
-				<a href="mailto:hlewis@tacc.utexas.edu">hlewis@tacc.utexas.edu</a></td>
+				<a href="mailto:nlewis@tacc.utexas.edu">nlewis@tacc.utexas.edu</a></td>
 			<td>
-				Center Operations &amp; Administration</td>
+				Large Scale Systems</td>
 		</tr>
 		<tr>
 			<td>
@@ -840,14 +848,6 @@
 				<a href="/web/website/about/directory/hang-liu">Liu, Hang</a></td>
 			<td>
 				<a href="mailto:hliu@tacc.utexas.edu">hliu@tacc.utexas.edu</a></td>
-			<td>
-				HPC Applications</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/si-liu">Liu, Si</a></td>
-			<td>
-				<a href="mailto:siliu@tacc.utexas.edu">siliu@tacc.utexas.edu</a></td>
 			<td>
 				HPC Applications</td>
 		</tr>
@@ -1029,6 +1029,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/kevin-price">Price, Kevin</a></td>
+			<td>
+				<a href="mailto:kprice@tacc.utexas.edu">kprice@tacc.utexas.edu</a></td>
+			<td>
+				Advanced Computing Interfaces</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/sophia-price">Price, Sophia</a></td>
 			<td>
 				<a href="mailto:sprice@tacc.utexas.edu">sprice@tacc.utexas.edu</a></td>
@@ -1066,14 +1074,6 @@
 				<a href="mailto:greid@tacc.utexas.edu">greid@tacc.utexas.edu</a></td>
 			<td>
 				Education &amp; Outreach</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/alex-rocha">Rocha, Alex</a></td>
-			<td>
-				<a href="mailto:rochaa@tacc.utexas.edu">rochaa@tacc.utexas.edu</a></td>
-			<td>
-				Web &amp; Mobile Applications</td>
 		</tr>
 		<tr>
 			<td>
@@ -1402,14 +1402,6 @@
 				<a href="mailto:xwj@tacc.utexas.edu">xwj@tacc.utexas.edu</a></td>
 			<td>
 				<a name="X"></a> Data Management &amp; Collections</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/quan-yuan">Yuan, Quan</a></td>
-			<td>
-				<a href="mailto:qyuan@tacc.utexas.edu">qyuan@tacc.utexas.edu</a></td>
-			<td>
-				<a name="Y"></a> HPC Frontline Group</td>
 		</tr>
 		<tr>
 			<td>
