--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -96,6 +96,19 @@
 				</div>
 			</div>
 		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading" id="data" role="tab">
+				<h4 class="panel-title">
+					<a aria-controls="administrative-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#administrative-associate" role="button">Administrative Associate</a></h4>
+			</div>
+			<div aria-labelledby="data" class="panel-collapse collapse" id="administrative-associate" role="tabpanel">
+				<div class="panel-body">
+					<p>Position will provide comprehensive, dependable, administrative support as part of a team within the Texas Advanced Computing Center. Office located at the J.J. Pickle Research campus in northwest Austin.</p>
+					<p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Administrative-Associate_R_00018318" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+				</div>
+			</div>
+		</div>
 		<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
