Major: Tours: Save New Content (changed under my nose)

--- a/web-content/root/about/tours--notice.html
+++ b/web-content/root/about/tours--notice.html
@@ -5,7 +5,11 @@
     .portlet-msg-info p:last-child {
       margin-bottom: 0;
     }</style>
+<style class="darkreader darkreader--sync" media="screen" type="text/css">
+</style>
 <div class="portlet-msg-info">
 	<p>
-		Due to safety concerns resulting from COVID-19, TACC has suspended all Machine Room and Visualization Lab tours through the end of the year. Please return for updates in 2021. If you have any questions please feel free to contact us at <a href="tel:512-475-9411">512-475-9411</a> or <a href="mailto:outreach@austin.utexas.edu">outreach@austin.utexas.edu</a>.</p>
+		For the Safety of our Visitors &amp; Staff: If you are sick or have been in contact with anyone who is sick, please refrain from visiting the labs. Call us to reschedule at <a href="tel:512-475-9411">512-475-9411</a> or email <a href="mailto:outreach@tacc.utexas.edu">outreach@tacc.utexas.edu</a>. Please review all the health and safety changes and guidelines at <b><a href="https://protect.utexas.edu/">https://protect.utexas.edu/</a></b>.</p>
+	<p>
+		<b><a href="https://healthyhorns.utexas.edu/images/pdf/ProtectiveFaceMaskGuidance_2020.pdf" target="_blank">Masks Strongly Recommended.</a></b> Masks are strongly recommended inside the lab and data center regardless of vaccination status.</p>
 </div>
