Quick: Tours: Replace "Stampede" with "Frontera"

--- a/web-content/root/about/tours--data-center.html
+++ b/web-content/root/about/tours--data-center.html
@@ -16,6 +16,6 @@
 		<p>
 			<b>Virtual Tour Only Available</b></p>
 		<p>
-			The J.J. Pickle Research Campus houses TACC's largest supercomputing systems, including Stampede, as well as some of the fastest, most efficient, and sought-after high-performance computing and data storage systems in the world!</p>
+			The J.J. Pickle Research Campus houses TACC's largest supercomputing systems, including Frontera, as well as some of the fastest, most efficient, and sought-after high-performance computing and data storage systems in the world!</p>
 	</div>
 </div>
