--- a/web-content/root/education/tours--side.html
+++ b/web-content/root/education/tours--side.html
@@ -3,7 +3,7 @@
 <h6>
 	TACC Data Center</h6>
 <p>
-	The J.J. Pickle Research Campus houses TACC's largest supercomputing systems, including <a href="/stampede" target="_blank">Stampede</a>, as well as some of the fastest, most efficient, and sought-after high performance computing and data storage systems in the world!</p>
+	The J.J. Pickle Research Campus houses TACC's largest supercomputing systems, including <a href="/frontera" target="_blank">Frontera</a>, as well as some of the fastest, most efficient, and sought-after high performance computing and data storage systems in the world!</p>
 <figure><div class="embed-responsive embed-responsive-16by9">
     <iframe allow="xr-spatial-tracking" allowfullscreen="" class="embed-responsive-item" frameborder="0" src="https://my.matterport.com/show/?m=H33Sz7PpKVP"></iframe></div>
 	<figcaption style="margin: 10px 0; text-align: center;">Explore the TACC Data Center in 3D</figcaption></figure>
