Staff Dir Update '21-12-01–'22-02-18: Restore Q.Y.

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -1405,6 +1405,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/quan-yuan">Yuan, Quan</a></td>
+			<td>
+				<a href="mailto:qyuan@tacc.utexas.edu">qyuan@tacc.utexas.edu</a></td>
+			<td>
+				<a name="Y"></a> HPC Frontline Group</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/stephanie-zeller">Zeller, Stephanie</a></td>
 			<td>
 				<a href="mailto:szeller@tacc.utexas.edu">szeller@tacc.utexas.edu</a></td>
