Staff Dir Update '21-12-01–'22-02-18: Fix K.P. Group

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -1033,7 +1033,7 @@
 			<td>
 				<a href="mailto:kprice@tacc.utexas.edu">kprice@tacc.utexas.edu</a></td>
 			<td>
-				Advanced Computing Interfaces</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
