RT-21424: Update REU Content (from Ticket)

--- a/web-content/root/reu--content.html
+++ b/web-content/root/reu--content.html
@@ -34,18 +34,19 @@
 	Participants will receive a $5,400 stipend. Additionally, travel grants to present research at an annual conference will be available to selected participants. In-person experiences include travel and housing (+meal card) at The University of Texas at Austin.</p>
 <h4 style="margin-top:20px;">
 	APPLICATION &amp; SELECTION</h4>
-<p>
-	The application period for Summer 2022 is approaching (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
-<!--<ol>
+<!--<p>
+	The application period for Summer 2022 is approaching (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.</p>-->
+<p>The application for Summer 2022 is now open.</p>
+<ol>
 	<li>
-		Complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiU4rbEBA3d72YEd__WDjI2sPkyidYhRAqYb_TcEK3L4eo8Q/viewform">application</a> before March 1, 2021, 11:59pm CST.</li>
+		Complete the <a href="https://forms.gle/uAoQft2dSEvo8dkB6">application</a> before April 12, 2022, 11:59 pm CST.</li>
 	<li>
 		Email copy of unofficial or official transcript to <a href="mailto:CIR4SC@tacc.utexas.edu">CIR4SC@tacc.utexas.edu</a>. Selected participants will be required to submit an official transcript.</li>
 	<li>
-		Secure commitment from two recommenders. These individuals should know your academic abilities and work ethic. At least one recommender should be college/university faculty. It is your responsibility to ask recommenders to complete the <a href="https://utexas.qualtrics.com/jfe/form/SV_cOVFoBizpbpZT8x">recommendation form</a> by the March 1st application deadline.</li>
+		Secure commitment from two recommenders. These individuals should know your academic abilities and work ethic. At least one recommender should be college/university faculty. It is your responsibility to ask recommenders to complete the <a href="https://utexas.qualtrics.com/jfe/form/SV_cOVFoBizpbpZT8x">recommendation form</a> by the April 12 priority deadline.</li>
 </ol>
 <p>
-	Notifications of acceptance for Summer 2021: Rolling until March 15.</p>-->
+	Notifications of acceptance for Summer 2022: Rolling until April 25.</p>
 <h4 style="margin-top:20px;">
 	ELIGIBILITY</h4>
 <p>
