RT-21424: Tweak REU Content (target="_blank")

--- a/web-content/root/reu--content.html
+++ b/web-content/root/reu--content.html
@@ -39,11 +39,11 @@
 <p>The application for Summer 2022 is now open.</p>
 <ol>
 	<li>
-		Complete the <a href="https://forms.gle/uAoQft2dSEvo8dkB6">application</a> before April 12, 2022, 11:59 pm CST.</li>
+		Complete the <a href="https://forms.gle/uAoQft2dSEvo8dkB6" target="_blank">application</a> before April 12, 2022, 11:59 pm CST.</li>
 	<li>
 		Email copy of unofficial or official transcript to <a href="mailto:CIR4SC@tacc.utexas.edu">CIR4SC@tacc.utexas.edu</a>. Selected participants will be required to submit an official transcript.</li>
 	<li>
-		Secure commitment from two recommenders. These individuals should know your academic abilities and work ethic. At least one recommender should be college/university faculty. It is your responsibility to ask recommenders to complete the <a href="https://utexas.qualtrics.com/jfe/form/SV_cOVFoBizpbpZT8x">recommendation form</a> by the April 12 priority deadline.</li>
+		Secure commitment from two recommenders. These individuals should know your academic abilities and work ethic. At least one recommender should be college/university faculty. It is your responsibility to ask recommenders to complete the <a href="https://utexas.qualtrics.com/jfe/form/SV_cOVFoBizpbpZT8x" target="_blank">recommendation form</a> by the April 12 priority deadline.</li>
 </ol>
 <p>
 	Notifications of acceptance for Summer 2022: Rolling until April 25.</p>
