RT-21424: Update REU Heading (from Ticket)

--- a/web-content/root/reu--heading.html
+++ b/web-content/root/reu--heading.html
@@ -1,4 +1,4 @@
 <h1>
-	NSF REU Site</h1>
+	Research Experience for Undergraduates</h1>
 <h2>
 	CYBERINFRASTRUCTURE (CI) RESEARCH 4 SOCIAL CHANGE</h2>
