RT-21424: Update REU Sidebar More (from Ticket)

--- a/web-content/root/reu--sidebar.html
+++ b/web-content/root/reu--sidebar.html
@@ -4,5 +4,5 @@
 	<!--<p>
 		<img alt="NSF 4-color logo" src="https://www.tacc.utexas.edu/documents/1084364/1135932/nsf1.jpg" width="100" /></p>-->
 	<p style="font-size: 11px;">
-		<i>CI Research 4 Social Change REU is made possible with support from <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1852538" target="_blank">National Science Foundation Award #1852538</a>, which replaces <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1359304" target="_blank">Award #1359304</a>.</i></p>
+		<em>The CI Research 4 Social Change REU (2019-2022) was made possible with support from the <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1852538" target="_blank">National Science Foundation Award #1852538</a>, and <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1359304" target="_blank">Award #1359304</a> (2014-2016).</em></p>
 </center>
