RT-21424: Update REU Content (from CMS)
changed a dash also

--- a/web-content/root/reu--content.html
+++ b/web-content/root/reu--content.html
@@ -3,7 +3,7 @@
 <p>
 	The proposed research projects are subject to change, contingent on new mentors and/or the research interests of the students. <em>To learn about past research projects, please visit the <a href="/reu/alumni">REU Alumni page</a>.</em></p>
 <h4>
-	June 6 — August 5, 2022</h4>
+	June 6 – August 5, 2022</h4>
 <p>
 	The Cyberinfrastructure (CI) Research for Social Change Research Experience for Undergraduates (REU) at TACC is actively engaging 10 undergraduate students each summer for nine-weeks in solving real-world problems of national relevance, teaching them to not only be critical thinkers, but to be creative and reflective as well.</p>
 <p>
@@ -36,7 +36,8 @@
 	APPLICATION &amp; SELECTION</h4>
 <!--<p>
 	The application period for Summer 2022 is approaching (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.</p>-->
-<p>The application for Summer 2022 is now open.</p>
+<p>
+	The application for Summer 2022 is now open.</p>
 <ol>
 	<li>
 		Complete the <a href="https://forms.gle/uAoQft2dSEvo8dkB6" target="_blank">application</a> before April 12, 2022, 11:59 pm CST.</li>
