TUP-146: In Script Reference Paired Doc in Repo

--- a/web-content/_scripts/findLinksAndSetTargets.html
+++ b/web-content/_scripts/findLinksAndSetTargets.html
@@ -1,4 +1,5 @@
 <!-- SEE: https://www.tacc.utexas.edu/news/tacc-in-the-news -->
+<!-- SEE: https://github.com/TACC/tacc-web-content/blob/ec6e5f8/web-content/_scripts/findLinksAndSetTargets.md -->
 <p>
 	<strong>JavaScript <code>findLinksAndSetTargets()</code></strong><br />
 	(to open ext. links in new window)</p>
