RT-21491: Fix indent and Apostrophe

--- a/web-content/root/education/EPIC/research.html
+++ b/web-content/root/education/EPIC/research.html
@@ -36,7 +36,7 @@
 	<p>
 		Lead: <a href="https://www.tacc.utexas.edu/about/directory/jayce-warner">Jayce Warner</a> &amp; <a href="https://www.tacc.utexas.edu/about/directory/stephanie-baker">Stephanie Baker</a></p>
 	<p>
-		CS Equity Deep Dive is a research project funded by a Google Computer Science Education Research (CS-ER) award that examines the factors that are associated with access to and participation in computing in middle and high school, as well as the relationship between secondary enrollment in CS and postsecondary outcomes. The study merges K-12 and college-level data from the Texas Education Research Center, the Stanford Education Data Archive, and the National Student Clearinghouse for over 3 million students to take an in-depth look at the correlates and consequences of disparities in students’ access to and participation in computing education.</p>
+		CS Equity Deep Dive is a research project funded by a Google Computer Science Education Research (CS-ER) award that examines the factors that are associated with access to and participation in computing in middle and high school, as well as the relationship between secondary enrollment in CS and postsecondary outcomes. The study merges K-12 and college-level data from the Texas Education Research Center, the Stanford Education Data Archive, and the National Student Clearinghouse for over 3 million students to take an in-depth look at the correlates and consequences of disparities in students&rsquo; access to and participation in computing education.</p>
 	<h4>
 		<abbr title="Expanding Computing Education Pathways">ECEP</abbr> (<dfn>Expanding Computing Education Pathways</dfn>)</h4>
 	<p>
@@ -122,7 +122,7 @@
 	<p>
 		Lead: <a href="https://www.tacc.utexas.edu/about/directory/nicole-martin">Nicole Martin</a></p>
 	<p>
-		The MTCS scale was developed to understand why teachers chose to teach computer science (CS). Grounded in self-determination theory, the scale characterizes teachers’ motivation to teach CS on a continuum from external to increasingly internal motivation. The MTCS scale consists of 18 items with Likert-type response options, and results from factor analyses show that the scale has internal reliability and construct validity. This measure can be used by researchers and practitioners to investigate the motivations of CS teachers and use that understanding to strengthen <abbr title="Computer Science education">CSEd</abbr> by addressing challenges related to recruiting, preparing, and retaining teachers.</p>
+		The MTCS scale was developed to understand why teachers chose to teach computer science (CS). Grounded in self-determination theory, the scale characterizes teachers' motivation to teach CS on a continuum from external to increasingly internal motivation. The MTCS scale consists of 18 items with Likert-type response options, and results from factor analyses show that the scale has internal reliability and construct validity. This measure can be used by researchers and practitioners to investigate the motivations of CS teachers and use that understanding to strengthen <abbr title="Computer Science education">CSEd</abbr> by addressing challenges related to recruiting, preparing, and retaining teachers.</p>
 	<h3>
 		Resources</h3>
 	<h4>
